What Are Attributes, and How Do They Work?

--- a/Day_01-17.8.25/UnderstandingHTMLAttributes.html
+++ b/Day_01-17.8.25/UnderstandingHTMLAttributes.html
@@ -11,5 +11,14 @@
 
 You will learn about HTML's role on the web, and what HTML attributes are.
     </p>
+    <img src="watermelon_CremsonSweet.jpg" alt="an image of a watermelon_CremsonSweet" width="400px" height="600px" >
+<hr>
+    <h2>
+        What Are Attributes, and How Do They Work?
+    </h2>
+    <a href="http://binalihotel.com" target="_blank" rel="noopener noreferrer"></a>
+   <input type="checkbox" name="checkbox" checked >
+   <label for="checkbox">This is a checkbox</label>
+
 </body>
 </html>
