Underustanding the HTML Boilerplate

--- a/Day_01-17.8.25/UnderstandingtheHTMLBoilerplate.html
+++ b/Day_01-17.8.25/UnderstandingtheHTMLBoilerplate.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Understanding the HTML Boilerplate</title>
-    <link rel="stylesheet" href="./css_files/style.css">
+    <link rel="stylesheet" href="./css_files/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-  href="https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap"
-  rel="stylesheet"
-/>
-</head>
-<body>
-   <p>
-    In these lectures, you will learn about the HTML boilerplate which is a ready-made template for your webpages.
-
-You will learn how to work with the link element, meta element and more.
-   </p> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <p>
+      In these lectures, you will learn about the HTML boilerplate which is a
+      ready-made template for your webpages. You will learn how to work with the
+      link element, meta element and more.
+    </p>
     <h2>
-        What Is the Role of the Link Element in HTML, and How Can It Be Used to Link to External Stylesheets?
+      What Is the Role of the Link Element in HTML, and How Can It Be Used to
+      Link to External Stylesheets?
     </h2>
     <p>
-        Let's learn about the link element, and how to use it to link to external stylesheets.
-
-The link element is used to link to external resources like stylesheets and site icons. Here is the basic syntax for using the link element for an external CSS file:
+      Let's learn about the link element, and how to use it to link to external
+      stylesheets. The link element is used to link to external resources like
+      stylesheets and site icons. Here is the basic syntax for using the link
+      element for an external CSS file:
     </p>
-</body>
+  </body>
 </html>
