I added a target of blank to ancher tag so it open on a new tab

--- a/Day_03-19.8.25/CatPhotoApp.html
+++ b/Day_03-19.8.25/CatPhotoApp.html
@@ -8,6 +8,7 @@
         Everyone loves
         <a
           href="https://cdn.freecodecamp.org/curriculum/cat-photo-app/running-cats.jpg"
+          target="_blank"
         >
           cute cats
         </a>
