Added figure element and figcaption

--- a/Day_03-19.8.25/CatPhotoApp.html
+++ b/Day_03-19.8.25/CatPhotoApp.html
@@ -32,10 +32,13 @@
           <li>< pointers</li>
           <li>lasagna</li>
         </ul>
-        <img
-          src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg"
-          alt="A slice of lasagna on a plate."
-        />
+        <figure>
+          <img
+            src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg"
+            alt="A slice of lasagna on a plate."
+          />
+        </figure>
+        <figcaption>Cats love lasagna.</figcaption>
       </section>
     </main>
   </body>
