Added embasis around the word love in figcaption

--- a/Day_03-19.8.25/CatPhotoApp.html
+++ b/Day_03-19.8.25/CatPhotoApp.html
@@ -38,7 +38,7 @@
             alt="A slice of lasagna on a plate."
           />
         </figure>
-        <figcaption>Cats love lasagna.</figcaption>
+        <figcaption>Cats <em>love</em> lasagna.</figcaption>
       </section>
     </main>
   </body>
