--- a/Day_03-19.8.25/CatPhotoApp.html
+++ b/Day_03-19.8.25/CatPhotoApp.html
@@ -54,5 +54,11 @@
         </figure>
       </section>
     </main>
+    <footer>
+      <p>
+        No Copyright -
+        <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>
+      </p>
+    </footer>
   </body>
 </html>
