Day 7 of codding:- id and class is used and practiced here

--- a/Day_07-22.8.25/HTMLFundamentals.html
+++ b/Day_07-22.8.25/HTMLFundamentals.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML Fundamentals</title>
   </head>
+  <style>
+    #fundamentals {
+      font-size: xx-large;
+      color: blue;
+    }
+    .textinsidep {
+      color: brown;
+      font-family: "Courier New", Courier, monospace;
+      font-style: oblique;
+    }
+    .madowah {
+      color: black;
+    }
+  </style>
   <body>
     <div>
       <h1>HTML Fundamentals</h1>
@@ -15,12 +29,12 @@
       </p>
     </div>
     <section>
-      <h1>HTML fundamentals</h1>
-      <p>
+      <h1 id="fundamentals">HTML fundamentals</h1>
+      <p class="textinsidep">
         This is inside a div, just for practice purposes. it does have a
         semantic unlike div.
       </p>
-      <p>
+      <p class="textinsidep madowah">
         his is because the section element has semantic meaning. Semantics are
         the meaning of words or phrases in a language. In HTML, which is a
         language, elements have their own semantic meaning too. So, this means
