Day 7 of codding:- html entities

--- a/Day_07-22.8.25/HTMLFundamentals.html
+++ b/Day_07-22.8.25/HTMLFundamentals.html
@@ -43,5 +43,14 @@
         mobiles, you name it.
       </p>
     </section>
+
+    <h2>What Are HTML Entities, and What Are Some Common Examples?</h2>
+    <p>
+      An HTML entity, or character reference, is a set of characters used to
+      represent a reserved character in HTML. In this example, there is a
+      paragraph element with an image element nested inside:
+    </p>
+
+    <p></p>
   </body>
 </html>
