--- a/Day_07-22.8.25/HTMLFundamentals.html
+++ b/Day_07-22.8.25/HTMLFundamentals.html
@@ -52,5 +52,30 @@
     </p>
 
     <p></p>
+    <h2>
+      What Is the Role of the Script Element in HTML, and How Can It Be Used to
+      Link to External JavaScript Files?
+    </h2>
+    <p>
+      The script element is used to embed executable code. Most developers will
+      use this to execute JavaScript code. JavaScript is used to add
+      interactivity to your web pages. Common examples of using JavaScript
+      include interactive games, image sliders, and dynamic forms that validate
+      user input in real-time.
+    </p>
+    <p>
+      <script>
+        alert("Welcome to freeCodeCamp");
+      </script>
+    </p>
+    <p>
+      The src attribute is used here to specify the location for that external
+      JavaScript file. src stands for "source". The reason why it is not
+      encouraged to place all of your JavaScript inside the HTML document is
+      because of separation of concerns. Separation of concerns is a design
+      principle where you separate your programs into distinct sections and have
+      each section address a separate concern. In this case, we want to separate
+      our JavaScript code from our HTML code.
+    </p>
   </body>
 </html>
