Day 7 of codding:- meta attribute and seo and how it help traffic to your site

--- a/Day_07-22.8.25/HTMLFundamentals.html
+++ b/Day_07-22.8.25/HTMLFundamentals.html
@@ -77,5 +77,15 @@
       each section address a separate concern. In this case, we want to separate
       our JavaScript code from our HTML code.
     </p>
+
+    <h2>
+      What Is the Role of the Meta Description, and How Does It Affect SEO?
+    </h2>
+    <p>
+      SEO, or Search Engine Optimization, is a practice that optimizes web pages
+      so they become more visible and rank higher on search engines. One way to
+      improve your site's SEO, is to provide a short description for the web
+      page using the meta element.
+    </p>
   </body>
 </html>
