Day 7 of codding:- og and its role is read here

--- a/Day_07-22.8.25/HTMLFundamentals.html
+++ b/Day_07-22.8.25/HTMLFundamentals.html
@@ -87,5 +87,19 @@
       improve your site's SEO, is to provide a short description for the web
       page using the meta element.
     </p>
+    <h2>What Is the Role of Open Graph Tags, and How Do They Affect SEO?</h2>
+    <p>
+      The open graph protocol enables you to control how your website's content
+      appears across various social media platforms, such as Facebook, LinkedIn,
+      and many more. By setting these open graph properties, you can entice
+      users to want to click and engage with your content. You can set these
+      properties through a collection of meta elements inside your HTML head
+      section. The first important OG property to include would be the title.
+      <a
+        href="https://www.freecodecamp.org/learn/full-stack-developer/lecture-html-fundamentals/what-is-the-role-of-open-graph-tags"
+      >
+        Read more...
+      </a>
+    </p>
   </body>
 </html>
