--- a/Day_08-23.8.25/workingwithAudioandVideoelemts.html
+++ b/Day_08-23.8.25/workingwithAudioandVideoelemts.html
@@ -11,5 +11,13 @@
       What Are the Roles of the HTML Audio and Video Elements, and How Do They
       Work?
     </h1>
+    <p>
+      The audio and video elements allow you to add sound and video content to
+      your HTML documents. The audio element supports popular audio formats like
+      mp3, wav, and ogg. The video element supports mp4, ogg, and webm formats.
+      To include audio content on your web page, you can use the audio element
+      with the src attribute pointing to the location of your audio file:
+    </p>
+    <audio src="timeneverheals.mp3"></audio>
   </body>
 </html>
