Day 8 of codding:- Audio controls attribute is added

--- a/Day_08-23.8.25/workingwithAudioandVideoelemts.html
+++ b/Day_08-23.8.25/workingwithAudioandVideoelemts.html
@@ -18,6 +18,6 @@
       To include audio content on your web page, you can use the audio element
       with the src attribute pointing to the location of your audio file:
     </p>
-    <audio src="timeneverheals.mp3"></audio>
+    <audio src="timeneverheals.mp3" controls></audio>
   </body>
 </html>
