Day 9 of codding:- audo and video continued, I added loop, muted attribes

--- a/Day_08-23.8.25/workingwithAudioandVideoelemts.html
+++ b/Day_08-23.8.25/workingwithAudioandVideoelemts.html
@@ -19,5 +19,19 @@
       with the src attribute pointing to the location of your audio file:
     </p>
     <audio src="timeneverheals.mp3" controls></audio>
+    <hr />
+    <p>
+      Apart from the src and controls attributes, there are several other
+      attributes that enhance the functionality of the audio element. The loop
+      attribute is a boolean attribute that makes the audio replay continuously.
+      Here's an example of using the loop attribute to play one of Quincy
+      Larson's songs titled "Can't stay down":
+    </p>
+    <audio
+      src="https://cdn.freecodecamp.org/curriculum/js-music-player/can't-stay-down.mp3"
+      loop
+      controls
+      muted
+    ></audio>
   </body>
 </html>
