Day 9 of codding:- audo and video continued, I added a video with loop, controls and muted attributes

--- a/Day_08-23.8.25/workingwithAudioandVideoelemts.html
+++ b/Day_08-23.8.25/workingwithAudioandVideoelemts.html
@@ -31,7 +31,18 @@
       src="https://cdn.freecodecamp.org/curriculum/js-music-player/can't-stay-down.mp3"
       loop
       controls
-      muted
     ></audio>
+    <h2>Video Section</h2>
+    <p>
+      All the attributes we have learned so far are also supported in the video
+      element. Here's an example of using a video element with the loop,
+      controls, and muted attributes:
+    </p>
+    <video
+      src="https://archive.org/download/BigBuckBunny_124/Content/big_buck_bunny_720p_surround.mp4"
+      loop
+      controls
+      muted
+    ></video>
   </body>
 </html>
