--- a/Day_10-25.8.25/BuildaHeartIcon.html
+++ b/Day_10-25.8.25/BuildaHeartIcon.html
@@ -11,5 +11,6 @@
       In this workshop, you will practice working with SVGs by building a heart
       icon
     </p>
+    <svg width="24" height="24" viewBox="0 0  24 24"></svg>
   </body>
 </html>
