--- a/Day_10-25.8.25/WorkingwiththeiframeElement.html
+++ b/Day_10-25.8.25/WorkingwiththeiframeElement.html
@@ -11,5 +11,16 @@
       In these lectures, you will learn how to work with the iframe element
       which is used to embed an external site on your web page.
     </p>
+    <h2>What Are Replaced Elements, and What Are Some Examples?</h2>
+    <p>
+      A replaced element is an element whose content is determined by an
+      external resource rather than by CSS itself. CSS, or cascading
+      stylesheets, is used to add styles to a web page. Common examples of
+      replaced elements include the image, iframe, and video elements. With
+      replaced elements, you can control the position, or layout of an element.
+      But your CSS cannot directly modify the content of that element. This
+      might be easier to explain with some examples. Consider the image element,
+      which embeds an image on your web page.
+    </p>
   </body>
 </html>
