--- a/Day_10-25.8.25/WorkingwiththeiframeElement.html
+++ b/Day_10-25.8.25/WorkingwiththeiframeElement.html
@@ -22,5 +22,83 @@
       might be easier to explain with some examples. Consider the image element,
       which embeds an image on your web page.
     </p>
+    <h2>How Do You Embed Videos onto Your Page Using the iframe Element?</h2>
+    <p>
+      First, what exactly is the iframe element? iframe stands for inline frame.
+      It's an inline element used to embed other HTML content directly within
+      the HTML page. That HTML content could be a video, map, another HTML
+      element, or even other web pages. Here's what the syntax of the iframe
+      element looks like:
+    </p>
+    <iframe
+      src="video-url"
+      width="width-value"
+      height="height-value"
+      allowfullscreen
+    ></iframe>
+    <p>
+      To embed a video within an iframe you can copy it directly from popular
+      video services like YouTube and Vimeo, or define it yourself with the src
+      attribute pointing to the URL of that video. Here's an example of
+      embedding a popular freeCodeCamp course from YouTube:
+    </p>
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/PkZNo7MFNFg?si=-UBVIUNM3csdeiWF"
+      title="YouTube video player"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin"
+      allowfullscreen
+    ></iframe>
+    <p>
+      You can then customize the iframe to your needs or even define your own by
+      copying the link to the YouTube video and pasting it in as the URL value.
+      The caveat is that you must replace https://youtu.be with
+      https://youtube.com/embed/. youtu.be is the domain when you copy the share
+      link and youtube.com/embed/ is the domain required for embedding videos
+      with the iframe element. Here's an example of that:
+    </p>
+    <iframe
+      src="https://youtube.com/embed/gp5H0Vw39yw?si=Rb_2nDK6abv1iIAM"
+      title="freeCodeCamp Typescript Course"
+      width="500"
+      height="285"
+      allowfullscreen
+    ></iframe>
+    <p>
+      Note that the video can come from anywhere. It doesn't have to come from
+      video services like YouTube and Vimeo. Here's a video from Pixabay
+      embedded with the iframe element:
+    </p>
+    <iframe
+      src="https://cdn.pixabay.com/video/2022/07/24/125310-733046613_large.mp4"
+      width="500"
+      height="285"
+    ></iframe>
+    <p>
+      Don't forget you can also embed a map, another web page, or direct HTML
+      within the iframe element. Here's a map I was able to embed with the
+      iframe element:
+    </p>
+    <h1>A Map from Openstreetmap.org Embedded with the iframe Element</h1>
+
+    <iframe
+      width="425"
+      height="350"
+      src="https://www.openstreetmap.org/export/embed.html?bbox=3.006134033203125%2C6.150112578753815%2C3.6357879638671875%2C6.749850810550778&amp;layer=mapnik"
+      style="border: 1px solid black"
+    >
+    </iframe>
+    <br />
+    <small>
+      <a href="https://www.openstreetmap.org/#map=11/6.4501/3.3210">
+        View Larger Map
+      </a>
+    </small>
+    <p>
+      If you want to embed direct HTML within the iframe element you have to use
+      the srcdoc attribute instead of src.
+    </p>
   </body>
 </html>
