Day 11 of codding:- lab- I added html video by copying embedd code from freecodecampt example for this project.

--- a/Day_11-26.8.25/BuildaVideoCompilationPage.html
+++ b/Day_11-26.8.25/BuildaVideoCompilationPage.html
@@ -6,10 +6,40 @@
     <title>Build a Video Compilation Page</title>
   </head>
   <body>
-    <h1>Build a Video Compilation Page</h1>
-    <p>
-      In this lab, you'll create a video compilation web page. You'll practice
-      working with the iframe element.
-    </p>
+    <section>
+      <h1>Build a Video Compilation Page</h1>
+      <p>
+        In this lab, you'll create a video compilation web page. You'll practice
+        working with the iframe element.
+      </p>
+    </section>
+    <main>
+      <h1>Front End Web Development</h1>
+      <p>
+        Front End Web Development involves designing and building user
+        interfaces of websites using HTML, CSS, and JavaScript. It focuses on
+        creating visually appealing, interactive, and user-friendly websites.
+        Front End developers ensure accessibility, performance optimization, and
+        adherence to web standards, blending creativity with technical
+        expertise.
+      </p>
+      <h2>HTML</h2>
+      <p>
+        HTML, or HyperText Markup Language, forms the backbone of web pages by
+        defining their basic structure and layout. It uses a series of elements
+        to display text, images, lists, tables, and other static content on a
+        web page.
+      </p>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/GDGejH3SDNQ"
+        title="HTML &amp; Coding Introduction – Course for Beginners"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
+    </main>
   </body>
 </html>
