--- a/Day_11-26.8.25/BuildaVideoCompilationPage.html
+++ b/Day_11-26.8.25/BuildaVideoCompilationPage.html
@@ -40,6 +40,24 @@
         referrerpolicy="strict-origin-when-cross-origin"
         allowfullscreen
       ></iframe>
+      <h2>CSS</h2>
+      <p>
+        CSS, or Cascading Style Sheets, is used to control the visual
+        presentation of HTML elements on a web page. It allows for customized
+        styling, including colors, fonts, layouts, and spacing, making websites
+        visually appealing. CSS also supports responsive design, ensuring web
+        pages look good on all devices.
+      </p>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/OXGznpKZ_sA"
+        title="CSS Tutorial – Full Course for Beginners"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
     </main>
   </body>
 </html>
