Day 11 of codding:- lab- I embeded JavaScript video from youtube using iframe by right clicking the video then copy embeded code

--- a/Day_11-26.8.25/BuildaVideoCompilationPage.html
+++ b/Day_11-26.8.25/BuildaVideoCompilationPage.html
@@ -58,6 +58,23 @@
         referrerpolicy="strict-origin-when-cross-origin"
         allowfullscreen
       ></iframe>
+      <h2>JavaScript</h2>
+      <p>
+        JavaScript is a programming language that adds interactivity to static
+        web pages, enabling dynamic content updates, form validations,
+        animations, and responsive behaviors based on user interactions and
+        events.
+      </p>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/jS4aFq5-91M"
+        title="JavaScript Programming - Full Course"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
     </main>
   </body>
 </html>
