Day 12 of codding:- lecture link added

--- a/Day_12-27.8.25/WorkingwithLinks.html
+++ b/Day_12-27.8.25/WorkingwithLinks.html
@@ -12,6 +12,15 @@
         In these lectures, you will learn about links, the target attribute,
         different link states, absolute, and relative paths, and more.
       </p>
+      <h2>
+        What Are the Different Target Attribute Types, and How Do They Work?
+      </h2>
+      <p>
+        You may have seen the target attribute on anchor elements, or links.
+        This important attribute tells the browser where to open the URL for the
+        anchor element:
+      </p>
+      <a href="https://freecodecamp.org" target="_blank">Visit freeCodeCamp</a>
     </main>
   </body>
 </html>
