Day 13 of codding:- lecture- path types

--- a/Day_12-27.8.25/WorkingwithLinks.html
+++ b/Day_12-27.8.25/WorkingwithLinks.html
@@ -21,6 +21,14 @@
         anchor element:
       </p>
       <a href="https://freecodecamp.org" target="_blank">Visit freeCodeCamp</a>
+      <h2>What Is the Difference Between Absolute and Relative Paths?</h2>
+      <p>
+        A path is a string that specifies the location of a file or directory in
+        a file system. In web development, paths let developers link to
+        resources like images, stylesheets, scripts, and other web pages. There
+        are absolute and relative paths - both are essential when specifying
+        file locations within a file system.
+      </p>
     </main>
   </body>
 </html>
