Day 13 of codding:- lecture- slash, dot and double dot explained

--- a/Day_12-27.8.25/WorkingwithLinks.html
+++ b/Day_12-27.8.25/WorkingwithLinks.html
@@ -29,6 +29,23 @@
         are absolute and relative paths - both are essential when specifying
         file locations within a file system.
       </p>
+      <h2>
+        What Is the Difference Between Slashes, a Single Dot, and Double Dot in
+        Path Syntax?
+      </h2>
+      <p>
+        You may have seen links like /public/logo.png, ./script.js, or
+        ../styles.css before. But what do these special types of links mean?
+        These are called file paths. There are three key syntaxes to know. First
+        is the slash, which can be a backslash (\) or forward slash (/)
+        depending on your operating system. The second is the single dot (.).
+        And finally, we have the double dot (..). The slash is known as the
+        "path separator". It is used to indicate a break in the text between
+        folder or file names. This is how your computer knows that naomis-files/
+        points to a directory of that same name, while naomis/files/ points to a
+        files directory in the naomis directory. A single dot points to the
+        current directory, and two dots point to the parent directory.
+      </p>
     </main>
   </body>
 </html>
