Day 13 of codding:- lecture- link status explained here

--- a/Day_12-27.8.25/WorkingwithLinks.html
+++ b/Day_12-27.8.25/WorkingwithLinks.html
@@ -46,6 +46,12 @@
         files directory in the naomis directory. A single dot points to the
         current directory, and two dots point to the parent directory.
       </p>
+      <h2>What Are the Different Link States, and Why Are They Important?</h2>
+      <p>
+        You may have seen a link on a web page become purple after you click it.
+        This is because the state of the link has changed, so different styling
+        gets applied. There are five different states a link can be in.
+      </p>
     </main>
   </body>
 </html>
