Day 13 of codding:- review-tags, element and  attribute are explained

--- a/Day_13-28.8.25/BasicHTMLReview.html
+++ b/Day_13-28.8.25/BasicHTMLReview.html
@@ -8,6 +8,35 @@
   <body>
     <main>
       <h1>Basic HTML Review</h1>
+      <p>
+        Before you are quizzed on the HTML knowledge you have gained so far, you
+        first need to review the concepts. Open up this page to review the HTML
+        boilerplate, audio and video elements, the different target attribute
+        values and more.
+      </p>
+      <p>
+        <strong>Comments: </strong> Comments are used in programming to leave
+        notes for yourself and other developers in your code. Here is the syntax
+        for a comment in HTML:
+      </p>
+      <!--This is an HTML comment.-->
+
+      <h2>Common HTML elements</h2>
+      <strong> Heading Elements: </strong>There are six heading elements in
+      HTML. The h1 through h6 heading elements are used to signify the
+      importance of content below them. The lower the number, the higher the
+      importance, so h2 elements have less importance than h1 elements.
+
+      <ol>
+        <li>
+          <h1>most important heading element</h1>
+        </li>
+        <li><h2>second most important heading element</h2></li>
+        <li><h3>third most important heading element</h3></li>
+        <li><h4>fourth most important heading element</h4></li>
+        <li><h5>fifth most important heading element</h5></li>
+        <li><h6>least important heading element</h6></li>
+      </ol>
     </main>
   </body>
 </html>
