Day 13 of codding:- review-tags, SEO and social sharing read

--- a/Day_13-28.8.25/BasicHTMLReview.html
+++ b/Day_13-28.8.25/BasicHTMLReview.html
@@ -37,6 +37,23 @@
         <li><h5>fifth most important heading element</h5></li>
         <li><h6>least important heading element</h6></li>
       </ol>
+      <h2>Special Characters and Linking</h2>
+      <p>
+        HTML entities: An HTML entity, or character reference, is a set of
+        characters used to represent a reserved character in HTML. Examples
+        include the ampersand (&amp;) symbol and the less than symbol (&lt;).
+      </p>
+      <p>This is an &lt;img /&gt; element</p>
+      <h2>SEO and Social Sharing</h2>
+      <p>
+        <ul>
+        <li>SEO: Search Engine Optimization is a practice that optimizes web pages
+        so they become more visible and rank higher on search engines.</li><li> Meta
+        (description) Element: This is used to provide a short description for
+        the web page and impacting SEO.</li>
+       <li> Open Graph tags: The open graph protocol enables you to control how your website's content appears across various social media platforms, such as Facebook, LinkedIn, and many more.</li>
+    </ul>
+      </p>
     </main>
   </body>
 </html>
