Day 14 of codding:- don't remember changes i made

--- a/Day_13-28.8.25/BasicHTMLReview.html
+++ b/Day_13-28.8.25/BasicHTMLReview.html
@@ -54,6 +54,8 @@
        <li> Open Graph tags: The open graph protocol enables you to control how your website's content appears across various social media platforms, such as Facebook, LinkedIn, and many more.</li>
     </ul>
       </p>
+      <code>(..)</code>
+     
     </main>
   </body>
 </html>
