Day 13 of codding:- lecture-we covered sematic html, structural hierarchy & difference between Presentianl and Semantic HTML

--- a/Day_14-29.8.25/semanticHTML.html
+++ b/Day_14-29.8.25/semanticHTML.html
@@ -6,8 +6,52 @@
     <title>Semantic HTML</title>
   </head>
   <body>
-    <main><h1>Importance of Semantic HTML</h1><
-        
-    /main>
+    <main>
+      <h1>Importance of Semantic HTML</h1>
+      <p>
+        In these lectures, you will learn about semantic HTML and why you should
+        care about it, semantic elements, how semantic HTML differs from
+        presentational HTML, and more.
+      </p>
+      <h2>Why Should You Care About Semantic HTML?</h2>
+      <p>
+        Semantics are the meaning of words, or phrases, in a language. In HTML,
+        which is a language, elements have their own semantic meaning too. In
+        fact, you can think of your HTML document like you would a text
+        document. And much like a text document, you might have headings,
+        images, bold text, and other formatting. The semantic meaning of an
+        element refers to what special information that element conveys.
+      </p>
+      <h2>Why is it Important to Have Good Structural Hierarchy?</h2>
+      <p>
+        The most important aspect of creating a structural hierarchy is the
+        proper use of heading elements. Heading elements are numbered as h1, h2,
+        h3, and so on. These numbers represent the heading level for that
+        element. Much like a text document, you do not want to use heading
+        levels in the incorrect order. Your h1 element is your top-level
+        heading. You will rarely have more than one of these on a page, and it
+        should typically come before all of your content. Your h2 element is
+        your subheading. It should always come after your h1 and might come
+        after some introductory text. Unlike an h1 element, you can have
+        multiple h2 elements on your page. You'll often do this to delineate
+        different sections of content. Following the pattern, your h3 element
+        should always come after an h2 element. That is, you should never skip
+        directly from h1 to h3. You can, however, have multiple heading elements
+        at the same level.
+      </p>
+      <h2>What Is the Difference Between Presentational and Semantic HTML?</h2>
+      <p>
+        Presentational HTML focuses on the appearance and style of the content.
+        In the early days of HTML, developers would use elements like the
+        center, big, and font elements. But in modern web development you
+        shouldn't use these types of elements, because of their limitations and
+        negative impact on accessibility and maintainability. Many
+        presentational HTML elements are deprecated, which means that they are
+        outdated and no longer recommended. There are better ways to get the
+        same results. However, it is helpful to know that they exist, so we'll
+        take a look at some examples. The font element is a deprecated element
+        used to set the font size and color of the text.
+      </p>
+    </main>
   </body>
 </html>
