Day 14 of codding:- lecture: What are Description lists?

--- a/Day_14-29.8.25/UnderstandingNuancedSemanticElements.html
+++ b/Day_14-29.8.25/UnderstandingNuancedSemanticElements.html
@@ -56,8 +56,21 @@
       <p>
         <strong>Warning:</strong> This product may cause allergic reactions.
       </p>
-      <h2></h2>
-      <p></p>
+      <h2>What Are Description Lists, and When Should You Use Them?</h2>
+      <p>
+        Description lists are perfect for presenting terms and definitions in an
+        organized and easy-to-read format, like in a glossary, or real
+        dictionary, where you can find words with their corresponding
+        definitions. This is an example of a description list in HTML with two
+        terms and their corresponding details:
+      </p>
+
+      <dl>
+        <dt>HTML</dt>
+        <dd>HyperText Markup Language</dd>
+        <dt>CSS</dt>
+        <dd>Cascading Style Sheets</dd>
+      </dl>
     </main>
   </body>
 </html>
