Day 14 of codding:- lecture: dl, dt and dd is used to practice

--- a/Day_14-29.8.25/UnderstandingNuancedSemanticElements.html
+++ b/Day_14-29.8.25/UnderstandingNuancedSemanticElements.html
@@ -68,6 +68,8 @@
       <dl>
         <dt>HTML</dt>
         <dd>HyperText Markup Language</dd>
+        <dd>STructure of the page</dd>
+        <dd>Another Text for testing</dd>
         <dt>CSS</dt>
         <dd>Cascading Style Sheets</dd>
       </dl>
