don't remember the changes imade

--- a/Day_16-31.8.25/WorkingwithTextandTimeSemanticElements.html
+++ b/Day_16-31.8.25/WorkingwithTextandTimeSemanticElements.html
@@ -8,6 +8,20 @@
   <body>
     <main>
       <h1>Working with Text and Time Semantic Elements</h1>
+      <h2>How Do Block and Inline Quotes Work in HTML?</h2>
+      <p>
+        n HTML, quoted elements are used to distinguish quoted text from the
+        surrounding content. This gives the quoted text a format that is easy to
+        identify. You should use the block quotation element for representing a
+        section quoted from another source. It's mainly used for extended
+        quotations. If the source of the quote has an address, you can cite it
+        with the cite attribute. The value of this attribute should be a valid
+        URL.
+      </p>
+      <blockquote cite="https://www.freecodecamp.org/news/learn-to-code-book/">
+        "Can you imagine what it would be like to be a successful developer? To
+        have built software systems that people rely upon?"
+      </blockquote>
     </main>
   </body>
 </html>
