--- a/Day_16-31.8.25/WorkingwithTextandTimeSemanticElements.html
+++ b/Day_16-31.8.25/WorkingwithTextandTimeSemanticElements.html
@@ -22,6 +22,29 @@
         "Can you imagine what it would be like to be a successful developer? To
         have built software systems that people rely upon?"
       </blockquote>
+      <p>
+        If you want to start and end the block quote with quotation marks, you
+        may need to write them explicitly within the text. You can write the
+        text directly within the block quotation element, like I just did, or
+        wrap it within one or more paragraph elements. This is helpful when the
+        text has multiple paragraphs, but you want to keep them within the same
+        block quote. Here's an example with four paragraphs:
+      </p>
+      <blockquote cite="https://www.freecodecamp.org/news/learn-to-code-book/">
+        <p>
+          Build your projects. Show them to your friends. Build projects for
+          your friends.
+        </p>
+        <p>
+          Build your network. Help the people you meet along the way. What goes
+          around comes around. You'll get what's coming to you.
+        </p>
+        <p>It is not too late. Life is long.</p>
+        <p>
+          You will look back on this moment years from now and be glad you made
+          a move.
+        </p>
+      </blockquote>
     </main>
   </body>
 </html>
