Day 17 of codding:- lecture:  citing element displayed visialy

--- a/Day_16-31.8.25/WorkingwithTextandTimeSemanticElements.html
+++ b/Day_16-31.8.25/WorkingwithTextandTimeSemanticElements.html
@@ -45,6 +45,25 @@
           a move.
         </p>
       </blockquote>
+      <p>
+        If you want to attribute the source visually, you can add a citation
+        element, cite, outside of the block quotation element. This is different
+        from the cite attribute. The citation element is an HTML element that
+        you can use to mark up the title of a referenced creative work like a
+        book article, song, film, website, or research paper. Here's an example:
+      </p>
+      <div>
+        <blockquote
+          cite="https://www.freecodecamp.org/news/learn-to-code-book/"
+        >
+          Can you imagine what it would be like to be a successful developer? To
+          have built software systems that people rely upon?
+        </blockquote>
+        <p>
+          —Quincy Larson,
+          <cite>How to Learn to Code and Get a Developer Job [Full Book].</cite>
+        </p>
+      </div>
     </main>
   </body>
 </html>
