--- a/Day_16-31.8.25/WorkingwithTextandTimeSemanticElements.html
+++ b/Day_16-31.8.25/WorkingwithTextandTimeSemanticElements.html
@@ -64,6 +64,18 @@
           <cite>How to Learn to Code and Get a Developer Job [Full Book].</cite>
         </p>
       </div>
+      <p>
+        That's exactly what the inline quotation element is for. It's for short
+        inline quotations from other sources. Most modern browsers will add
+        quotation marks around the inline quote automatically when you use this
+        element. This is an example:
+      </p>
+      <p>
+        As Quincy Larson said,
+        <q cite="https://www.freecodecamp.org/news/learn-to-code-book/">
+          Momentum is everything.
+        </q>
+      </p>
     </main>
   </body>
 </html>
