Day 17 of codding:- lecture: html abbr with title added

--- a/Day_17-17.9.25/HowDoYouDisplayAbbreviationsandAcronymsinHTML.html
+++ b/Day_17-17.9.25/HowDoYouDisplayAbbreviationsandAcronymsinHTML.html
@@ -25,6 +25,14 @@
         sentence HTML is the foundation of the web:
       </p>
       <p><abbr>HTML</abbr> is the foundation of the web.</p>
+      <p>
+        Let's take the same example as before, but add the title attribute. It
+        will be HyperText Markup Language, the expanded form of the acronym:
+      </p>
+      <p>
+        <abbr title="HyperText Markup Language">HTML</abbr> is the foundation of
+        the web.
+      </p>
     </main>
   </body>
 </html>
