Day 20 of codding:- lecture: I used sup element

--- a/Day_19-18.9.25/WorkingwithSpecializedSemanticElements.html
+++ b/Day_19-18.9.25/WorkingwithSpecializedSemanticElements.html
@@ -14,6 +14,14 @@
       <h1>
         How Do You Display Mathematical Equations and Chemical Formulas in HTML?
       </h1>
+      <p>
+        The superscript element is used to display a piece of text as a
+        superscript. A superscript is a symbol or letter printed above the
+        normal line of text. Here is an example using the superscript element to
+        illustrate exponents:
+      </p>
+      <p>2<sup>2</sup> (2 squared) is 4.</p>
+      <p>4<sup>3</sup> (4 to the power of 3) is ....</p>
     </main>
   </body>
 </html>
