Day 20 of codding:- lecture: an exmple of how sup should be used

--- a/Day_19-18.9.25/WorkingwithSpecializedSemanticElements.html
+++ b/Day_19-18.9.25/WorkingwithSpecializedSemanticElements.html
@@ -22,6 +22,11 @@
       </p>
       <p>2<sup>2</sup> (2 squared) is 4.</p>
       <p>4<sup>3</sup> (4 to the power of 3) is ....</p>
+      <p>
+        This is another example of how it is used: Monseigneur is often written
+        as <strong>M<sup>gr</sup></strong
+        >.
+      </p>
     </main>
   </body>
 </html>
