Day 20 of codding:- lecture: subscript element is used and domenstrated

--- a/Day_19-18.9.25/WorkingwithSpecializedSemanticElements.html
+++ b/Day_19-18.9.25/WorkingwithSpecializedSemanticElements.html
@@ -27,6 +27,15 @@
         as <strong>M<sup>gr</sup></strong
         >.
       </p>
+      <p>
+        Here is an example of using the subscript element to show the chemical
+        representation for carbon dioxide.
+      </p>
+      <p>CO<sub>2</sub></p>
+      <p>
+        Common use cases for the subscript element include chemical formulas,
+        footnotes, and variable subscripts.
+      </p>
     </main>
   </body>
 </html>
